# 3D_rendering

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/resources/shaders/: LuminanceHistogram.csh  PBRShader.fs  adaptationHDR.fs  adaptationHDR.vsh  getAverageLum.csh  getAverageLuminance_stage1.csh  getAverageLuminance_stage2.csh  multiLightShader.fs  multiLightShader.vsh
app/src/: main.cpp  test.cpp  test.h
engine/: CMakeLists.txt
engine/include/: grafik.h
engine/src/core/: application.cpp  application.h  common.h  events.cpp  events.h  input.h  window.cpp  window.h
engine/src/rendering/: mesh.cpp  mesh.h  renderer.h  shader.cpp  shader.h  transform.cpp  transform.h  vertex_buffer.h  visualModel.cpp  visualModel.h
engine/src/scene/: camera.cpp  camera.h  gameObject.h  lights.h  scene.cpp  scene.h
engine/src/utils/: loadMesh.h  log_errs.h  vertex.h
